--- a/composer.html
+++ b/composer.html
@@ -24,8 +24,8 @@
 	<div class="topnav" id="top-nav"> <!-- TOP NAVIGATION -->
 		<p>
 			<span id="nav-songs" style="cursor:pointer" onclick="openNav()"><img src="" alt="">Songs</span>
-			<a href="Composer.html" id="nav-link">Composer</a>
-			<a href="Dedication.html" id="nav-link">Dedication</a>
+			<a href="composer.html" id="nav-link">Composer</a>
+			<a href="dedication.html" id="nav-link">Dedication</a>
 			<br>
 		</p>
 	</div>
@@ -177,4 +177,5 @@
 
 </script>
 </body>
+
 </html>
