--- a/composer.html
+++ b/composer.html
@@ -65,7 +65,7 @@
 
 	<div class="images-row">
 		<div class="column">
-			<img src="images/AGA.jpg">
+			<img src="images/AGA.JPG">
 			<img src="images/AGA Guitar.png">
 			<img src="images/AGA_CAFE.JPG">
 			<img src="images/Andres.jpg">
@@ -74,10 +74,10 @@
 			<img src="images/ASTREET.jpeg">
 			<img src="images/Lascano.jpeg">
 			<img src="images/GuitarShot.jpeg">
-			<img src="images/AGA_ROOF.PNG">
+			<img src="images/AGA_ROOF.png">
 			<img src="images/AGA_ROO.PNG">
 			<img src="images/Ashot.jpeg">
-			<img src="images/AGABL.jpg">
+			<img src="images/AGABL.JPG">
 			<img src="images/Aga.jpeg">
 			<img src="images/George.jpeg">
 			<img src="images/AGAMOUNT.jpg">
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
