--- a/composer.html
+++ b/composer.html
@@ -85,6 +85,8 @@
 	</div>
 
 <script src="lyrics.js"></script><!-- DATA LYRICS -->
+
+<!-- JavaScript script on the UI/UX -->
 <script>
 
 		// Set Style with user's device
@@ -177,6 +179,4 @@
 
 </script>
 </body>
-
 </html>
-
